--- a/ANDROID_APP/app/src/main/res/values/strings.xml
+++ b/ANDROID_APP/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
 
     <string name="tolerance_help">Sound threshold for sending a desktop alert.
 The red section of the bar represents the current sound level! Use the circle to set the threshold above the ambient sound level!</string>
-    <string name="code_help">Code to connect / send notifications to the website. Open https://dev.reed.codes/buzz on the device that you\'d like to recieve notifications on!</string>
+    <string name="code_help">Code to connect / send notifications to the website. Open https://buzz.reed.codes on the device that you\'d like to recieve notifications on!</string>
+    <string name="pairing_failure">"Failed to pair, check your saved IP in settings!"</string>
+    <string name="alert_failure">The request to send your alert to the server failed! Check saved IP in settings</string>
 </resources>
